--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - NODE_ENV=production
       - VIRTUAL_HOST=tereaiqos.ru # домен сайта
       - LETSENCRYPT_HOST=tereaiqos.ru # домен для SSL
-      - LETSENCRYPT_EMAIL=qwe@email.com
+      - LETSENCRYPT_EMAIL=qwe@gmail.com
     networks:
       - web
     volumes:
