--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,6 @@ jobs:
           ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "
             cd /var/www/tereaiqos &&
             git pull &&
-            docker-compose down &&
-            docker-compose build &&
-            docker-compose up -d
+            docker compose down &&
+            docker compose up -d --build
           "
