--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,29 +12,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            **/node_modules
-            ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install dependencies with legacy peer deps
-        run: npm ci --legacy-peer-deps
-
-      - name: Build application
-        run: npm run build
-
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.7.0
         with:
@@ -45,14 +22,9 @@ jobs:
 
       - name: Deploy to server
         run: |
-          rsync -avz --delete \
-            --exclude 'node_modules' \
-            --exclude '.git' \
-            --exclude '.next/cache' \
-            ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/tereaiqos/
-          
           ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "
             cd /var/www/tereaiqos &&
+            git pull &&
             docker compose down &&
             docker compose up -d --build
           "
