--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies with legacy peer deps
+        run: npm install --legacy-peer-deps
+
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.7.0
         with:
@@ -25,6 +33,7 @@ jobs:
           ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "
             cd /var/www/tereaiqos &&
             git pull &&
+            npm install --legacy-peer-deps &&
             docker compose down &&
             docker compose up -d --build
           "
