--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,28 +12,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install dependencies with legacy peer deps
-        run: npm install --legacy-peer-deps
-
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Add server to known hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H 94.141.162.96 >> ~/.ssh/known_hosts
 
       - name: Deploy to server
         run: |
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "
+          ssh root@94.141.162.96 "
             cd /var/www/tereaiqos &&
             git pull &&
-            npm install --legacy-peer-deps &&
             docker compose down &&
-            docker compose up -d --build
+            docker compose build &&
+            docker compose up -d
           "
